    Condition Scenarios. (Gaurav Kanade via cnauroth)

    HADOOP-11901. BytesWritable fails to support 2G chunks due to integer
    overflow. (Reynold Xin via wheat9)

    HADOOP-11218. Add TLSv1.1,TLSv1.2 to KMS, HttpFS, SSLFactory.
    (Vijay Singh via wheat9)

    HADOOP-12467. Respect user-defined JAVA_LIBRARY_PATH in Windows Hadoop
    scripts. (Radhey Shah via wheat9)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12374. Updated expunge command description.
    (WeiWei Yang via eyang)

    HADOOP-11361. Fix a race condition in MetricsSourceAdapter.updateJmxCache.
    (Brahma Reddy Battula via ozawa)

    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
    time unit parameter. (zxu via rkanter)

    HADOOP-12482. Race condition in JMX cache update. (Tony Wu via lei)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)
