@@ -115,12 +115,74 @@ import|;
 end_import
 
 begin_import
-import|import
+import|import static
 name|org
 operator|.
 name|mockito
 operator|.
 name|Mockito
+operator|.
+name|mock
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|spy
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|timeout
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|times
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|verify
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|when
 import|;
 end_import
 
@@ -134,6 +196,30 @@ DECL|field|zkServer
 specifier|private
 name|TestingServer
 name|zkServer
+decl_stmt|;
+comment|// rollover every 2 sec
+DECL|field|timeout
+specifier|private
+specifier|final
+name|int
+name|timeout
+init|=
+literal|4000
+decl_stmt|;
+DECL|field|rolloverFrequency
+specifier|private
+specifier|final
+name|long
+name|rolloverFrequency
+init|=
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|timeout
+operator|/
+literal|2
+argument_list|)
 decl_stmt|;
 annotation|@
 name|Before
@@ -193,14 +279,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|long
-name|rolloverFrequency
-init|=
-literal|15
-operator|*
-literal|1000
-decl_stmt|;
-comment|// rollover every 15 sec
 comment|// use the same seed so we can predict the RNG
 name|long
 name|seed
@@ -273,10 +351,13 @@ decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProvider
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seed
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|Properties
@@ -386,16 +467,23 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|+
-literal|2000
-operator|)
+name|secretProvider
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 name|currentSecret
 operator|=
@@ -455,16 +543,23 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|+
-literal|2000
-operator|)
+name|secretProvider
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 name|currentSecret
 operator|=
@@ -524,16 +619,23 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|+
-literal|2000
-operator|)
+name|secretProvider
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 block|}
 finally|finally
@@ -555,14 +657,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|long
-name|rolloverFrequency
-init|=
-literal|15
-operator|*
-literal|1000
-decl_stmt|;
-comment|// rollover every 15 sec
 comment|// use the same seed so we can predict the RNG
 name|long
 name|seedA
@@ -730,28 +824,37 @@ decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProviderA
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seedA
 argument_list|)
+argument_list|)
 decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProviderB
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seedB
 argument_list|)
+argument_list|)
 decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProviderC
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seedC
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|Properties
@@ -1098,16 +1201,59 @@ literal|"not one of the secrets they were supposed to"
 argument_list|)
 expr_stmt|;
 block|}
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|+
-literal|2000
-operator|)
+name|secretProviderA
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
+expr_stmt|;
+name|verify
+argument_list|(
+name|secretProviderB
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
+argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
+expr_stmt|;
+name|verify
+argument_list|(
+name|secretProviderC
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
+argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 name|currentSecretA
 operator|=
@@ -1348,15 +1494,6 @@ throws|throws
 name|Exception
 block|{
 name|long
-name|rolloverFrequency
-init|=
-literal|15
-operator|*
-literal|1000
-decl_stmt|;
-comment|// rollover every 15 sec
-comment|// use the same seed so we can predict the RNG
-name|long
 name|seedA
 init|=
 name|System
@@ -1500,19 +1637,25 @@ decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProviderA
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seedA
 argument_list|)
+argument_list|)
 decl_stmt|;
 name|ZKSignerSecretProvider
 name|secretProviderB
 init|=
+name|spy
+argument_list|(
 operator|new
 name|ZKSignerSecretProvider
 argument_list|(
 name|seedB
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|Properties
@@ -1622,16 +1765,23 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|+
-literal|2000
-operator|)
+name|secretProviderA
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 name|currentSecretA
 operator|=
@@ -1777,14 +1927,41 @@ literal|1
 index|]
 argument_list|)
 expr_stmt|;
-name|Thread
-operator|.
-name|sleep
+name|verify
 argument_list|(
-operator|(
-name|rolloverFrequency
-operator|)
+name|secretProviderA
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
 argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
+expr_stmt|;
+name|verify
+argument_list|(
+name|secretProviderB
+argument_list|,
+name|timeout
+argument_list|(
+name|timeout
+argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|rollSecret
+argument_list|()
 expr_stmt|;
 name|currentSecretA
 operator|=
@@ -1962,8 +2139,6 @@ block|{
 name|ServletContext
 name|servletContext
 init|=
-name|Mockito
-operator|.
 name|mock
 argument_list|(
 name|ServletContext
@@ -1971,8 +2146,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|Mockito
-operator|.
 name|when
 argument_list|(
 name|servletContext
